--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contrast-bootstrap-angular",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "release": "standard-version && git push --follow-tags && npm run publish-lib",
-    "publish-lib": "ng build ng-cdbangular --prod && cd dist/ng-cdbangular && npm publish"
+    "publish-lib": "ng build ng-cdbangular && cd dist/ng-cdbangular && npm publish"
   },
   "private": true,
   "dependencies": {
