--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         
+      - name: git config
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+        
       - name: Node.js setup
         uses: actions/setup-node@v3
         with:
